--- a/style.css
+++ b/style.css
@@ -107,3 +107,17 @@ p {
     flex-basis: calc(100% - 20px);
   }
 }
+
+.title{
+ display: flex;
+ justify-content:center ;
+ align-items:center ;
+ color: #558ec7;
+
+}
+
+.title:hover{
+  color: #bf8799;
+  transition: color 0.2s;
+
+}
